[project]
name = "sparse_autoencoder"
description="Sparse autoencoder for GPT2"
version = "0.1"
authors = [{name = "OpenAI"}]
dependencies = [
    "blobfile == 2.0.2",
    "geom-median>=0.1.0",
    "numpy<2.0",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0",
    "torch==2.2",
    "transformer_lens == 1.9.1",
    "typeguard>=4.4.4",
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sparse_autoencoder*"]
